--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.23.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.53.0"
   },
   "devDependencies": {
